# xacro

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  KNOWN_ISSUES.md  README.md
.github/workflows/: coverage.yml  pre-commit.yaml  rust.yaml
examples/: README.md  advanced.rs  basic.rs  generic_xml.rs  robot.xacro  robot_advanced.xacro  robot_config.yaml  robot_with_args.xacro  stdin.rs  with_args.rs
src/: directives.rs  error.rs  eval.rs  expand.rs  expander.rs  lib.rs  parse.rs  processor.rs  test_utils.rs  types.rs
src/eval/: interpreter.rs  lexer.rs  scope.rs  yaml_tag_handler.rs
src/eval/interpreter/: constants.rs  core.rs  init.rs  math.rs  mod.rs  parsing.rs  yaml_utils.rs
src/eval/scope/: metadata.rs  mod.rs  resolution.rs  scope_stack.rs  substitution.rs  util.rs
src/expander/: children.rs  directives.rs  directives_tests.rs  guards.rs  include.rs  macro_call.rs  mod.rs  utils.rs
src/extensions/: core.rs  mod.rs  ros.rs  ros_yaml_handlers.rs
src/features/: mod.rs
src/features/conditions/: mod.rs  tests.rs
src/features/includes/: mod.rs  tests.rs
src/features/loops/: mod.rs
src/features/macros/: mod.rs  tests.rs
src/features/properties/: mod.rs  tests.rs
src/parse/: document.rs  macro_def.rs  xml.rs
src/utils/: document.rs  eval.rs  lexer.rs  mod.rs  xml.rs
tests/: circular_dependency_dict_key_test.rs  common.rs  macro_definition_only.rs  macro_parameter_scoping.rs  namespace_handling.rs  property_in_macro_conditional.rs  repro_nested_extension.rs  repro_pow_masked_error.rs  test_array_indexing_in_macros.rs  test_block_conditionals.rs  test_block_stress.rs  test_builder_pattern.rs  test_deps.rs  test_duplicate_params.rs  test_error_context.rs  test_include_missing_files.rs  test_includes.rs  test_inf_nan_support.rs  test_integration.rs  test_lazy_properties.rs  test_load_yaml.rs  test_logical_operators.rs  test_macro_default_param_equals.rs  test_macros.rs  test_math_functions.rs  test_namespace_compat.rs  test_nested_include.rs  test_nested_macro_parameter_expressions.rs  test_number_formatting_metadata.rs  test_package_tracking.rs  test_pow_in_property.rs  test_print_location.rs  test_processing_instructions.rs  test_properties.rs  test_property_redefinition.rs  test_property_scoping.rs  test_pseudo_boolean_tracking.rs  test_quoted_paren.rs  test_refcell_safety.rs  test_ros_extensions.rs  (+4 more)
tests/data/: eval_arithmetic.xacro  eval_arithmetic_expected.urdf  namespace_nonstandard_prefix.xacro  nested_include_level1.xacro  nested_include_level2.xacro  nested_include_main.xacro  nested_include_main_expected.urdf  print_location_include_inner.xacro  print_location_include_test.xacro  print_location_macro_test.xacro  print_location_test.xacro  property_error_in_value.xacro  property_namespace_handling.xacro  property_namespace_handling_expected.urdf  property_test_multiple_expected.xacro  property_value_expressions.xacro  property_value_expressions_expected.urdf  test_config.yaml  test_inf_nan.yaml
