[package]
name = "xacro"
version = "0.1.3"
edition = "2021"
rust-version = "1.70"
description = "A xml preprocessor for xacro files to generate URDF files"
license = "MIT"
repository = "https://github.com/deniz-hofmeister/xacro"

[features]
default = ["compat" , "yaml" ]
compat = []  # Python-compatible number formatting (tracks int vs float distinction)
yaml = ["dep:saphyr"]  # YAML loading support via load_yaml() function

[dependencies]
xml = "0.8"
xmltree = "0.12"
thiserror = "2.0"
pyisheval = "0.14"
regex = "1.12"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.11"
glob = "0.3"
saphyr = { version = "0.0", optional = true }

[dev-dependencies]
similar = "2.7"
tempfile = "3.14"

[[bin]]
name = "xacro"
path = "src/bin/xacro.rs"

[patch.crates-io]
pyisheval = { git = "https://github.com/kaidokert/pyisheval", tag = "v0.14_with_mixed_equality" }
xmltree = { git = "https://github.com/kaidokert/xmltree-rs", tag = "v0.12.0_preserve_ns_patch" }
