[package]
name = "xacro"
version = "0.1.3"
edition = "2021"
rust-version = "1.70"
description = "A xml preprocessor for xacro files to generate URDF files"
license = "MIT"
repository = "https://github.com/kaidokert/xacro"

[features]
default = ["compat" , "yaml" ]
compat = []  # Python-compatible number formatting (tracks int vs float distinction)
yaml = ["dep:saphyr"]  # YAML loading support via load_yaml() function

[dependencies]
xml = "0.8"
xmltree = { package = "xmltree-ns", version="0.13" }
thiserror = "2.0"
pyisheval = "0.16"
regex = "1.12"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.11"
glob = "0.3"
saphyr = { version = "0.0", optional = true }

[dev-dependencies]
similar = "2.7"
tempfile = "3.14"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "xacro"
path = "src/bin/xacro.rs"

[patch.crates-io]
pyisheval = { git = "https://github.com/kaidokert/pyisheval", tag = "v0.16.0_with_in_operator" }
